Adjusted card shadow

--- a/marketplace.html
+++ b/marketplace.html
@@ -110,45 +110,42 @@
                 <!--end of container-->
             </section>
             <section>
-                <div class="container">
+               <div class="container">
                     <div class="row">
                     	<div class="col-sm-4">
-                            <div class="feature feature-1 box-shadow text-left"> <img alt="Image" src="img/pepe-1.jpg">
+                            <div class="feature feature-1 text-left"> <img alt="Image" src="img/pepe-1.jpg">
                             	<span class="labelright">Gen 0</span>
                              	<span class="labelleft">#000</span>
                                 	<div class="feature__body boxed boxed--border">
                                    		<a href="profile.html"><h5>Satoshi Nakamoto Pepe</h5> </a>
                                   			 <span>Rareness Score: <b> 100 </b></span><br>
                                   			 <span>Amount Issued: <b> 001 </b></span><br>
-                                  			 <span>Amount For Sale: <b> 000 </b></span><br>
                                         		<b><a href="#">Price: 0.01 eth </b></a>                           
-                       								<a href="#"><span class="label"> <i class="icon icon-tag-3 icon--xs stack-interface stack-cart"></i>Buy Now</span> </div></a>
+                       								<a href="#"><span class="label box-shadow"> <i class="icon icon-tag-3 icon--xs stack-interface stack-cart"></i>Buy Now</span> </div></a>
                             					</div>
                        	 					</div>
                     	<div class="col-sm-4">
-                            <div class="feature feature-1 box-shadow  text-left"> <img alt="Image" src="img/pepe-2.jpg">
+                            <div class="feature feature-1text-left"> <img alt="Image" src="img/pepe-2.jpg">
                             	<span class="labelright">Gen 0</span>
                              	<span class="labelleft">#000</span>
                                 	<div class="feature__body boxed boxed--border">
                                    		<a href="profile.html"><h5>Satoshi Nakamoto Pepe</h5> </a>
                                   			 <span>Rareness Score: <b> 100 </b></span><br>
                                   			 <span>Amount Issued: <b> 001 </b></span><br>
-                                  			 <span>Amount For Sale: <b> 000 </b></span><br>
                                         		<b><a href="#">Price: 0.01 eth </b></a>                           
-                       								<a href="#"><span class="label"> <i class="icon icon-tag-3 icon--xs stack-interface stack-cart"></i>Buy Now</span> </div></a>
+                       								<a href="#"><span class="labelsale"> <i class="icon icon-tag-3 icon--xs stack-interface stack-cart"></i>SOLD OUT</span> </div></a>
                             					</div>
                        	 					</div>
                     	<div class="col-sm-4">
-                            <div class="feature feature-1 box-shadow text-left"> <img alt="Image" src="img/pepe-4.jpg">
+                            <div class="feature feature-1 text-left"> <img alt="Image" src="img/pepe-4.jpg">
                             	<span class="labelright">Gen 0</span>
                              	<span class="labelleft">#000</span>
                                 	<div class="feature__body boxed boxed--border">
                                    		<a href="profile.html"><h5>Satoshi Nakamoto Pepe</h5> </a>
                                   			 <span>Rareness Score: <b> 100 </b></span><br>
                                   			 <span>Amount Issued: <b> 001 </b></span><br>
-                                  			 <span>Amount For Sale: <b> 000 </b></span><br>
                                         		<b><a href="#">Price: 0.01 eth </b></a>                           
-                       								<a href="#"><span class="label"> <i class="icon icon-tag-3 icon--xs stack-interface stack-cart"></i>Buy Now</span> </div></a>
+                       								<a href="#"><span class="label box-shadow">Buy Now</span> </div></a>
                             					</div>
                        	 					</div>
             						</section>
