--- a/index.html
+++ b/index.html
@@ -75,72 +75,78 @@
                         <div class="col-sm-6 col-md-5 hidden-xs"> <img alt="Image" src="img/cards.png"> </div>
                     </div>
                 </div>
-            </section>                    		
-			<section class="space--lg">
+                </section>
+                <section class="text-center space--lg">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-sm-10 col-md-9">
-                        <h2><b>What is PepeDapp?</b></h2>
-                            <span class="h3">
-                                No matter what you are feeling, there’s a Pepe for that. That’s the beauty of the Pepe. It’s the beauty of expression. </p><p> Pepedapp is a game where users can create, buy and sell original rare pepe artwork. </p>
-
-                            </span>
-                            <a href="marketplace.html">Enter</a>
+                    <div class="row justify-content-center">
+                        <div class="col-md-10 col-lg-8">
+                            <h2>What is PepeDapp?</h2>
+                            <p class="lead">
+                                No matter what you are feeling, there’s a Pepe for that. That’s the beauty of the Pepe. It’s the beauty of expression. Pepedapp is a game where users can create, buy and sell original rare pepe artwork. </p>
+                            </p>
                         </div>
                     </div>
                     <!--end of row-->
                 </div>
                 <!--end of container-->
-            </section> 
-            <section class="switchable space--lg">
-                                <div class="container">
-                                    <div class="row justify-content-between">
-                                    <div class="col-md-6 col-lg-5">
-                                    <h2><b>How does it work?</b></h2>
-                                            <ol class="process-3">
-                                                <li class="process_item">
-                                                    <div class="process__number">
-                                                        <span>1</span>
-                                                    </div>
-                                                    <div class="process__body">
-                                                        <h4>Create</h4>
-                                                        <p>
-Create and submit your rare pepe artwork to be uploaded to our marketplace.                                                        </p>
-                                                    </div>
-                                                </li>
-                                                <li class="process_item">
-                                                    <div class="process__number">
-                                                        <span>2</span>
-                                                    </div>
-                                                    <div class="process__body">
-                                                        <h4>Buy</h4>
-                                                        <p>
-Select from a selection of rare pepes to be purchased directly from the creator of that pepe.                                                        </p>
-                                                    </div>
-                                                </li>
-                                                <li class="process_item">
-                                                    <div class="process__number">
-                                                        <span>3</span>
-                                                    </div>
-                                                    <div class="process__body">
-                                                        <h4>Sell</h4>
-                                                        <p>
-Sell the pepes you own for the price you deem fair.                                                      </p>
-                                                    </div>
-                                                </li>
-                                            </ol>
-                                        </div>
-                                        <div class="col-md-6 text-center">
-                                            <img alt="Image" class="border--round box-shadow-wide" src="img/create.jpg" />
-                                            
-                                        </div>
-                                        
-                                    </div>
-                                    <!--end of row-->
-                                </div>
-                                <!--end of container-->
-                            </section>        
- <section class="space--lg bg--secondary">
+            </section>
+           <section class="switchable switchable--switch ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img alt="Image" src="img/icon-1.jpg" />
+                        </div>
+                        <div class="col-md-6 col-lg-5">
+                            <div class="switchable__text">
+                                <h2>Create and Submit Original Artwork</h2>
+                                <p class="lead">
+Users can submit their artwork to PepeDapp to be featured and sold on the marketplace. Creators get 96% of the sale of their original Pepe Cards.                                  </p>
+                                <a href="#">Learn More &raquo;</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+            </section>
+            <section class="switchable ">
+                <div class="container">
+                    <div class="row justify-content-around">
+                        <div class="col-md-6">
+                            <img alt="Image" src="img/icon-2.jpg" />
+                        </div>
+                        <div class="col-md-6 col-lg-5">
+                            <div class="switchable__text">
+                                <h2>Buy </h2>
+                                <p class="lead">
+Buy original Pepe Cards directly in our marketplace using Metamask. The price of the card is determined by the seller. By default, Metamask will open to the lowest asking price of that card. Once owned, your cards will appear in your "my pepes" wallet.                                </p>
+                                <a href="#">Learn More &raquo;</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+            </section>
+            <section class="switchable switchable--switch ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img alt="Image" src="img/icon-3.jpg" />
+                        </div>
+                        <div class="col-md-6 col-lg-5">
+                            <div class="switchable__text">
+                                <h2>Sell</h2>
+                                <p class="lead">
+Once a Pepe Card is owned (either via <a href="#"> submission</a> or buy <a href="#"> purchasing a card</a>) users can set the sell price and post it up for sale in the marketplace</p>                                <a href="#">Learn More &raquo;</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+            </section>
+             <section class="space--lg bg--secondary">
                 <div class="container">
                     <div class="row">
                     	<div class="col-sm-4">
@@ -148,54 +154,54 @@ Sell the pepes you own for the price you deem fair.                             
                             	<span class="labelright">Gen 0</span>
                              	<span class="labelleft">#000</span>
                                 	<div class="feature__body boxed boxed--border">
-                                   		<a href="profile.html"><h5>Satoshi Nakamoto Pepe</h5> </a>
+                                   	<h5>Satoshi Nakamoto Pepe</h5>
                                   			 <span>Amount issued: <b> 001 </b></span><br>
                                   			 <span>Rareness Score: <b> 100 </b></span><br>
-                                        		<b><a href="#">Price: 0.01 eth </b></a>                           
-                       								<a href="#"><span class="label"> <i class="icon icon-tag-3 icon--xs stack-interface stack-cart"></i>Buy Now</span> </div></a>
+                       								<span class="label">Buy Now</span> </div>
                             					</div>
                        	 					</div>
-                    	<div class="col-sm-4">
-                            <div class="feature feature-1 text-left"> <img alt="Image" src="img/pepe-4.jpg">
+                    	<div class="col-sm-4 hidden-xs">
+                            <div class="feature feature-1 text-left"> <img alt="Image" src="img/pepe-2.jpg">
                             	<span class="labelright">Gen 0</span>
                              	<span class="labelleft">#001</span>
                                 	<div class="feature__body boxed boxed--border">
-                                   		<h5>Hal Finney Pepe</h5> 
+                                   	<h5>Pepe</h5>
                                   			 <span>Amount issued: <b> 001 </b></span><br>
                                   			 <span>Rareness Score: <b> 100 </b></span><br>
-                                        		<a href="#">Purchase</a>                           
-                       								<a href="#"><span class="label"> <i class="icon icon-tag-3 icon--xs stack-interface stack-menu"></i>0.01 eth</span> </div></a>
+                       								<span class="label">Buy Now</span> </div>
                             					</div>
                        	 					</div>
-                    	<div class="col-sm-4">
-                            <div class="feature feature-1 text-left"> <img alt="Image" src="img/pepe-2.jpg">
+                    	<div class="col-sm-4 hidden-xs">
+                            <div class="feature feature-1 text-left"> <img alt="Image" src="img/pepe-4.jpg">
                             	<span class="labelright">Gen 0</span>
                              	<span class="labelleft">#002</span>
                                 	<div class="feature__body boxed boxed--border">
-                                   		<h5>Hal Finney Pepe</h5> 
+                                   	<h5>Pepe</h5>
                                   			 <span>Amount issued: <b> 001 </b></span><br>
-                                  			 <span>Rareness Score: <b> 100 </b></span><br>
-                                        		<a href="#">Purchase</a>                           
-                       								<a href="#"><span class="label"> <i class="icon icon-tag-3 icon--xs stack-interface stack-menu"></i>0.01 eth</span> </div></a>
+                                  			 <span>Rareness Score: <b> 100 </b></span><br>          
+                       								<span class="label">Buy Now</span> </div>
                             					</div>
                        	 					</div>
+                       	 		<div class="col-sm-12 text-center">			
+                                <a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Go to the Marketplace</span> </a>
             		</section> 
-            					<section class="space--lg text-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-10 col-md-8">
-                        <h2><b>Call to action</b></h2>
-                            <span class="h3">
-                                No matter what you are feeling, there’s a Pepe for that. That’s the beauty of the Pepe. It’s the beauty of expression. </p><p> Pepedapp is a game where users can create, buy and sell original rare pepe artwork. </p>
 
-                            </span>
-                                <a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Enter</span> </a>
+                            <section class="text-center space--lg">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-10 col-lg-8">
+                            <h2>CTA</h2>
+                            <p class="lead">
+                                No matter what you are feeling, there’s a Pepe for that. That’s the beauty of the Pepe. It’s the beauty of expression. Pepedapp is a game where users can create, buy and sell original rare pepe artwork. </p>
+                            </p>
+<a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Enter</span> </a>
+
                         </div>
                     </div>
                     <!--end of row-->
                 </div>
                 <!--end of container-->
-            </section> 
+            </section>
            <footer class="footer-3 bg--secondary text-center-xs space--xs ">
                 <div class="container">
                     <div class="row">
