--- a/index.html
+++ b/index.html
@@ -190,11 +190,10 @@ Once a Pepe Card is owned (either via <a href="#"> submission</a> or buy <a href
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-8">
-                            <h2>CTA</h2>
+                            <h2>The new best Crypto Dapp.</h2>
                             <p class="lead">
-                                No matter what you are feeling, there’s a Pepe for that. That’s the beauty of the Pepe. It’s the beauty of expression. Pepedapp is a game where users can create, buy and sell original rare pepe artwork. </p>
-                            </p>
-<a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Enter</span> </a>
+Unlike CryptoKitties, PepeDapp allows users to upload and sell their own artwork. Each piece of submitted artwork is vetted by the PepeDapp team and uploaded according to our <a href="#">generation and issuance</a> formula.                        </p>
+<a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Enter the Marketplace</span> </a>
 
                         </div>
                     </div>
