--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                             <div class="mt--2">
                                 <h1>We're taking Pepe back.</h1>
                                 <p class="lead"> Create, buy, and sell Rare Pepe Cards on Ethereum.  </p>
-                                <a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Enter</span> </a><span class="block type--fine-print">In this app, you set the sell price. <a href="faq.html"> See how it works. </a></span>
+                                <a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Enter</span> </a><span class="block type--fine-print">In this app, you set the sell price. <a href="#how"> See how it works. </a></span>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-5 hidden-xs"> <img alt="Image" src="img/cards.png"> </div>
                     </div>
                 </div>
                 </section>
-                <section class="text-center space--lg">
+                <section class="text-center space--md">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-8">
@@ -90,6 +90,7 @@
                 </div>
                 <!--end of container-->
             </section>
+            <a name="how"></a>
            <section class="switchable switchable--switch ">
                 <div class="container">
                     <div class="row">
@@ -101,7 +102,7 @@
                                 <h2>Create and Submit Original Artwork</h2>
                                 <p class="lead">
 Users can submit their artwork to PepeDapp to be featured and sold on the marketplace. Creators get 96% of the sale of their original Pepe Cards.                                  </p>
-                                <a href="#">Learn More &raquo;</a>
+                                <a href="submit.html">Submit your Pepe Art &raquo;</a>
                             </div>
                         </div>
                     </div>
@@ -120,7 +121,7 @@ Users can submit their artwork to PepeDapp to be featured and sold on the market
                                 <h2>Buy </h2>
                                 <p class="lead">
 Buy original Pepe Cards directly in our marketplace using Metamask. The price of the card is determined by the seller. By default, Metamask will open to the lowest asking price of that card. Once owned, your cards will appear in your "my pepes" wallet.                                </p>
-                                <a href="#">Learn More &raquo;</a>
+                                <a href="#">View the Marketplace &raquo;</a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +139,7 @@ Buy original Pepe Cards directly in our marketplace using Metamask. The price of
                             <div class="switchable__text">
                                 <h2>Sell</h2>
                                 <p class="lead">
-Once a Pepe Card is owned (either via <a href="#"> submission</a> or buy <a href="#"> purchasing a card</a>) users can set the sell price and post it up for sale in the marketplace</p>                                <a href="#">Learn More &raquo;</a>
+Once a Pepe Card is owned (either via submission or by purchasing a card) users can set the sell price and post it up for sale in the marketplace</p> 
                             </div>
                         </div>
                     </div>
@@ -186,7 +187,7 @@ Once a Pepe Card is owned (either via <a href="#"> submission</a> or buy <a href
                                 <a class="btn btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">Go to the Marketplace</span> </a>
             		</section> 
 
-                            <section class="text-center space--lg">
+                            <section class="text-center space--md">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-8">
@@ -206,17 +207,16 @@ Unlike CryptoKitties, PepeDapp allows users to upload and sell their own artwork
                     <div class="row">
                         <div class="col-sm-6"> <img alt="Image" class="logo" src="img/logo-dark.png">
                             <ul class="list-inline list--hover">
-                                <li> <a href="#"><span class="type--fine-print">About<br></span></a> </li>
-                                <li> <a href="#"><span class="type--fine-print">Connect</span></a> </li>
-                                <li> <a href="#"><span class="type--fine-print">FAQs</span></a> </li>
+                                <li> <a href="about.html"><span class="type--fine-print">About<br></span></a> </li>
+                                <li> <a href="submit.html"><span class="type--fine-print">Submit</span></a> </li>
+                                <li> <a href="faq.html"><span class="type--fine-print">FAQs</span></a> </li>
                             </ul>
                         </div>
                         <div class="col-sm-6 text-right text-center-xs">
                             <ul class="social-list list-inline list--hover">
-                                <li><a href="#"><i class="socicon socicon-telegram icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
+                                <li><a href="http://t.me/pepedapp"><i class="socicon socicon-telegram icon icon--xs"></i></a></li>
+                                <li><a href="https://twitter.com/pepedapp"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
+                                <li><a href="#"><i class="socicon icon socicon-reddit icon--xs"></i></a></li>
                             </ul>
                         </div>
                     </div>
