--- a/faq.html
+++ b/faq.html
@@ -7,9 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="css/flickity.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/theme-greensea.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
+        
+        <link href="css/jquery.steps.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
 
@@ -44,9 +49,9 @@
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                	<a class="btn btn--sm type--uppercase" href="#purchase-template"> <span class="btn__text">
+                                	<a class="btn btn--sm type--uppercase" href="my-pepes.html"> <span class="btn__text">
                                      My Pepes</span> </a>
-                                    <a class="btn btn--sm btn--primary type--uppercase" href="#purchase-template"> <span class="btn__text">
+                                    <a class="btn btn--sm btn--primary type--uppercase" href="marketplace.html"> <span class="btn__text">
                                     Marketplace</span> </a>
                                 </div>
                             </div>
@@ -56,69 +61,68 @@
             </div>
         </div>
   
-            <section class="bg--secondary text-center">
-                <div class="container ">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="feature feature-1 box-shadow"> 
-                            	<div class="imagebg align-center"> 
-                            		<img alt="Image" src="img/pepe-1.jpg">
-                             			<span class="labelone">#000</span>
-                             			<span class="labeltwo">Gen 0</span></div>
-                                			<div class="feature__body boxed boxed--border text-left">
-                                   				<h5>Satoshi Nakamoto Pepe</h5>
-                                 				<span>Amount Issued: <b> 001 </b></span><br>
-                                  			 <span>Rareness Score: <b> 100 </b></span><br>
-                                 				<a href="#" class="">Price: 0.01 eth</a>
-                       							<a href="#"><span class="label">buy now</span> </div></a>
-                            				</div>
-                        				</div>
-                        			</div>
-                        		</div>
-                        	</div>
-                       	 					</section>
-                    		<section class="switchable">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-sm-8 col-md-7">
-                                            <h2>The Satoshi Nakamoto Pepe</h2>
-                                          
-                                            <p class="lead">
-The Satoshi Nakamoto Pepe Card is the rarest pepe to ever exist on the Ethereum blockchain. The beloved phantom creator of Bitcoin and Blockchain Technology, Satoshi is. This card is a tribute to his selflessness, his modesty, and his genius.                                    </p>
-                                            <a class="btn btn--sm btn--primary type--uppercase" href="#purchase-template"> <span class="btn__text">
-                                    Buy now</span> </a>
-                                        </div>
-                                        <div class="col-sm-4 col-md-3">
-                                            <div class="text-block">
-                                                <h5>Pepe Card Information</h5>
-                                                <p> Name: Satoshi Nakamoto Pepe
-                                                    <br />Generation: 0
-                                                    <br />Amount Issued: 2
-                                                    <br />Pepe #000
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!--end of row-->
-                                </div>
-                                <!--end of container-->
-                            </section>
-            <footer class="footer-3 text-center-xs space--xs bg--secondary">
+        <div class="main-container">
+            <section class="text-center space--md">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-10 col-lg-8">
+                            <ul class="accordion accordion-2">
+                            <h2>Getting Started</h2>
+								<li class="">
+									<div class="accordion__title">
+										<span class="h5">What do I need to use Rare Pepe Cards?</span>
+									</div>
+									<div class="accordion__content">
+									Content
+									</div>
+								</li>
+								<li class="">
+									<div class="accordion__title">
+										<span class="h5">Installing & Using Metamask</span>
+									</div>
+									<div class="accordion__content">
+									Content
+									</div>
+								</li>
+						<h2>Understanding Rare Pepes</h2>
+								<li class="">
+									<div class="accordion__title">
+										<span class="h5">What do I need to use Rare Pepe Cards?</span>
+									</div>
+									<div class="accordion__content">
+									Content
+									</div>
+								</li>
+								<li class="">
+									<div class="accordion__title">
+										<span class="h5">What do I need to use Rare Pepe Cards?</span>
+									</div>
+									<div class="accordion__content">
+									Content
+									</div>
+								</li>
+</ul>
+                        </div>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+            </section>
+           <footer class="footer-3 bg--secondary text-center-xs space--xs ">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6"> <img alt="Image" class="logo" src="img/logo-dark.png">
                             <ul class="list-inline list--hover">
-                                <li> <a href="#"><span class="type--fine-print">About<br></span></a> </li>
-                                <li> <a href="#"><span class="type--fine-print">Connect</span></a> </li>
-                                <li> <a href="#"><span class="type--fine-print">FAQs</span></a> </li>
+                                <li> <a href="about.html"><span class="type--fine-print">About<br></span></a> </li>
+                                <li> <a href="submit.html"><span class="type--fine-print">Submit</span></a> </li>
+                                <li> <a href="faq.html"><span class="type--fine-print">FAQs</span></a> </li>
                             </ul>
                         </div>
                         <div class="col-sm-6 text-right text-center-xs">
                             <ul class="social-list list-inline list--hover">
-                                <li><a href="#"><i class="socicon socicon-telegram icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
+                                <li><a href="http://t.me/pepedapp"><i class="socicon socicon-telegram icon icon--xs"></i></a></li>
+                                <li><a href="https://twitter.com/pepedapp"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
+                                <li><a href="#"><i class="socicon icon socicon-reddit icon--xs"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -132,8 +136,19 @@ The Satoshi Nakamoto Pepe Card is the rarest pepe to ever exist on the Ethereum 
             </footer>
         </div>
         <script src="js/jquery-3.1.1.min.js"></script>
+        <script src="js/flickity.min.js"></script>
+        <script src="js/easypiechart.min.js"></script>
         <script src="js/parallax.js"></script>
+        <script src="js/typed.min.js"></script>
+        <script src="js/datepicker.js"></script>
+        <script src="js/isotope.min.js"></script>
+        <script src="js/ytplayer.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
+        <script src="js/granim.min.js"></script>
+        <script src="js/jquery.steps.min.js"></script>
         <script src="js/countdown.min.js"></script>
+        <script src="js/twitterfetcher.min.js"></script>
+        <script src="js/spectragram.min.js"></script>
         <script src="js/smooth-scroll.min.js"></script>
         <script src="js/scripts.js"></script>
 
